<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connect"
        android:showAsAction="never"
        android:title="@string/connection" />

    <item
        android:id="@+id/action_disconnect"
        android:showAsAction="never"
        android:title="@string/disconnection" />

    <item
        android:id="@+id/action_setting"
        android:showAsAction="never"
        android:title="@string/setting" />

    <item
        android:id="@+id/action_offline_list"
        android:showAsAction="never"
        android:title="@string/offline_list" />

    <item
        android:id="@+id/action_offline"
        android:showAsAction="never"
        android:title="@string/offline" />

    <item
        android:id="@+id/action_upgrade"
        android:showAsAction="never"
        android:title="@string/upgrade" />

    <item
        android:id="@+id/action_pen_status"
        android:showAsAction="never"
        android:title="@string/pen_status" />

</menu>