<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yingwei.testing.testpenn2.view.CallActivity">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:src="@mipmap/denied"
        android:onClick="deny"/>

    <ImageView
        android:id="@+id/iv_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="40dp"
        android:src="@mipmap/receive"
        android:onClick="receive"/>

    <Button
        android:id="@+id/btn_record"
        android:onClick="record"
        android:text="@string/audioRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@id/btn_record"
        android:onClick="play"
        android:text="@string/playRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="remoteRecord"
        android:text="@string/remoteRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
